<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activities.Login">

    <EditText
        android:id="@+id/CodeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo"
        tools:background="@color/colorAccent"
        />

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/CodeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="onLoginClick"
        android:text="@string/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CodeText" />

    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="onSignUpClick"
        android:text="@string/signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/CodeIdentifierText"
        app:layout_constraintBaseline_toBaselineOf="@+id/CodeText"
        app:layout_constraintEnd_toStartOf="@+id/CodeText" />

</android.support.constraint.ConstraintLayout>