<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activities.SignUp">

    <EditText
        android:id="@+id/PhoneBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/EmailBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/PhoneIdentifier"
        app:layout_constraintTop_toBottomOf="@+id/UserIDBox" />

    <EditText
        android:id="@+id/EmailBox"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/ProviderCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/EmailIdentifier"
        app:layout_constraintTop_toBottomOf="@+id/PhoneBox" />

    <EditText
        android:id="@+id/UserIDBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/PhoneBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/UserIDIdentifier"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/ProviderCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onProviderClick"
        android:text="@string/Provider_Checkbox"
        app:layout_constraintBottom_toTopOf="@+id/PatientCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailBox" />

    <CheckBox
        android:id="@+id/PatientCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onPatientClick"
        android:text="@string/Patient_Checkbox"
        app:layout_constraintBottom_toTopOf="@+id/SignUpSaveButtton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProviderCheckBox" />

    <Button
        android:id="@+id/SignUpSaveButtton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onSaveClick"
        android:text="@string/Save_Changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PatientCheckBox" />

    <TextView
        android:id="@+id/UserIDIdentifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/UserIDIdentifierText"
        app:layout_constraintBaseline_toBaselineOf="@+id/UserIDBox"
        app:layout_constraintEnd_toStartOf="@+id/UserIDBox"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/PhoneIdentifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/PhoneIdentifierText"
        app:layout_constraintBaseline_toBaselineOf="@+id/PhoneBox"
        app:layout_constraintEnd_toStartOf="@+id/PhoneBox"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/EmailIdentifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/EmailIdentifierText"
        app:layout_constraintBaseline_toBaselineOf="@+id/EmailBox"
        app:layout_constraintEnd_toStartOf="@+id/EmailBox"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>