...
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onViewProfileClick"
        android:text="@string/ViewContactInfo"
        app:layout_constraintBottom_toTopOf="@+id/GenerateLoginCodeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ListOfProblemsButton" />

    <Button
        android:id="@+id/GenerateLoginCodeButton"
...
